force-app/main/default/objects/Partner_Request__c/Partner_Request__c.object-meta.xml
<CustomObject>
    <description>Requests made from partner organizations</description>
    <label>Partner Request</label>
    <nameField>
        <label>Partner Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>