force-app/main/default/objects/Partner_Request__c/fields/Implementation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Hours__c</fullName>
    <inlineHelpText>The number of hours it takes to implement the request</inlineHelpText>
    <label>Implementation Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>