force-app/main/default/objects/Partner_Request__c/fields/Implementation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Notes__c</fullName>
    <inlineHelpText>Any notes on the implementation.  Difficulties, Special Instructions, Comments to the Requester.</inlineHelpText>
    <label>Implementation Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>