force-app/main/default/objects/Partner_Request__c/fields/New_URL__c.field-meta.xml
<CustomField>
    <fullName>New_URL__c</fullName>
    <inlineHelpText>The URL that points to the new location</inlineHelpText>
    <label>New URL</label>
    <type>Url</type>
</CustomField>