force-app/main/default/objects/Partner_Request__c/fields/PR_ID__c.field-meta.xml
<CustomField>
    <fullName>PR_ID__c</fullName>
    <displayFormat>PR-{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Automatically generated ID to track requests.</inlineHelpText>
    <label>PR ID</label>
    <type>AutoNumber</type>
</CustomField>