force-app/main/default/objects/Partner_Request__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <defaultValue>Today() + 7</defaultValue>
    <inlineHelpText>Requested date of delivery.</inlineHelpText>
    <label>Requested Delivery Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>