force-app/main/default/objects/Partner_Request__c/fields/Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name__c</fullName>
    <inlineHelpText>The sandbox name.  Example (TEST1, JOE2, PASQA)</inlineHelpText>
    <label>Sandbox Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>