force-app/main/default/objects/Partner_Request__c/fields/Sandbox_Type__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Type__c</fullName>
    <inlineHelpText>Determines the size and data content of the sandbox</inlineHelpText>
    <label>Sandbox Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer (10MB)</fullName>
                <default>true</default>
                <label>Developer (10MB)</label>
            </value>
            <value>
                <fullName>Config Only (500MB)</fullName>
            </value>
            <value>
                <fullName>Full Copy (Same as Prod)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>