force-app/main/default/objects/Partner_Request__c/fields/Smart_Nav_Action__c.field-meta.xml
<CustomField>
    <fullName>Smart_Nav_Action__c</fullName>
    <inlineHelpText>The Smart Navigation Action for which the URL should be changed.</inlineHelpText>
    <label>Smart Nav Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Quote</fullName>
            </value>
            <value>
                <fullName>Retrieve Quote</fullName>
            </value>
            <value>
                <fullName>Make Changes</fullName>
            </value>
            <value>
                <fullName>Make a Payment</fullName>
            </value>
            <value>
                <fullName>View Bills</fullName>
            </value>
            <value>
                <fullName>View Documents</fullName>
            </value>
            <value>
                <fullName>View Offer</fullName>
            </value>
            <value>
                <fullName>Other - Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>