force-app/main/default/objects/Partner_Request__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <inlineHelpText>Any special instructions for the fulfillment of this request.  Who to contact when task is completed, whether or not to delay fulfilling the request before a certain date, data load requirements, etc...</inlineHelpText>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>