force-app/main/default/objects/Partner_Request__c/fields/User_Accounts__c.field-meta.xml
<CustomField>
    <fullName>User_Accounts__c</fullName>
    <inlineHelpText>Provide the email address of the user(s) that need access.
User names will be the email address with the sandbox name as the suffix.</inlineHelpText>
    <label>User Accounts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>