force-app/main/default/objects/Partner_Request__c/recordTypes/Environment_Access.recordType-meta.xml
<RecordType>
    <fullName>Environment_Access</fullName>
    <active>true</active>
    <description>Request to provide access to an existing environment</description>
    <label>Environment Access</label>
</RecordType>