force-app/main/default/objects/Partner_Request__c/recordTypes/Generic.recordType-meta.xml
<RecordType>
    <fullName>Generic</fullName>
    <active>true</active>
    <description>Generic request.  One not covered by other record types.</description>
    <label>Generic</label>
</RecordType>