force-app/main/default/objects/Partner_Request__c/recordTypes/New_Environment.recordType-meta.xml
<RecordType>
    <fullName>New_Environment</fullName>
    <active>true</active>
    <description>New Environment Request.  Request for a new sandbox.</description>
    <label>New Environment</label>
</RecordType>