force-app/main/default/objects/Partner_Request__c/recordTypes/URL_Change.recordType-meta.xml
<RecordType>
    <fullName>URL_Change</fullName>
    <active>true</active>
    <description>Change the URL for a Smart Navigation.</description>
    <label>URL Change</label>
</RecordType>