force-app/main/default/objects/Partner_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PR_ID__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Requested_Delivery_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>