force-app/main/default/objects/Partner_Request__c/listViews/PR_Hours.listView-meta.xml
<ListView>
    <fullName>PR_Hours</fullName>
    <columns>PR_ID__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Implementation_Hours__c</columns>
    <columns>Implementation_Notes__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>PR Hours</label>
</ListView>