force-app/main/default/objects/Partner_Request__c/listViews/PR_Hours_Reporting.listView-meta.xml
<ListView>
    <fullName>PR_Hours_Reporting</fullName>
    <columns>PR_ID__c</columns>
    <columns>NAME</columns>
    <columns>Implementation_Hours__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Implementation_Hours__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PR Hours Reporting</label>
</ListView>